Name: udon-shell
Description:
    Command-line interface between udon and traditional filesystems
Cabal-Version: >= 1.2
Version: 0.1
Stability: experimental
Synopsis: Universal Distributed Object Notation
License: BSD3
Category: Data
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
executable udon
  Build-Depends: base, containers, bytestring, mtl, directory, binary, udon
  Main-Is: Main.hs
